tests/compiler/expected/output/BinaryOperatorFunctionDoesNotExistError.shtk.txt
MODULE BinaryOperatorFunctionDoesNotExistError.shtk
ERROR in Line 10 Col 11

    a = b + c
          ^
Type error, operator '+' does not exist for BinaryOperatorFunctionDoesNotExistError.shtk::Foobar and BinaryOperatorFunctionDoesNotExistError.shtk::Foobar

BinaryOperatorFunctionDoesNotExistError.shtk:10:10
